Use specific font variables for date/time

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -146,6 +146,10 @@ $font_line_height_quote:    $font_size_quote + 4;
 $font_quote_author:         $font_serif_thin;
 $font_size_quote_author:    13px;
 
+// Current date/time
+$font_datetime:             $font_sans_thin;
+$font_size_datetime:        12px;
+
 // Aside
 $font_aside:                    $font_default;
 $font_size_aside_text:          $font_size_default + 2;
