Update date/time style

--- a/_includes/datetime.html
+++ b/_includes/datetime.html
@@ -1,4 +1,4 @@
-<div id="datetime">
+<div id="datetime_block">
     <script type="text/javascript">
         $(function() {
             setInterval(function() {
@@ -27,7 +27,7 @@
         });
     </script>
     
-    <div>
+    <div class="datetime">
         <table>
             <tr>
                 <td>
