--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,7 @@
 @import "mixin";
 
 @import "header";
+@import "quote";
 @import "announcements";
 @import "datetime";
 @import "weather";
@@ -401,47 +402,6 @@ section.column_left_sidebar {
                     background-color: $color_button_hover_bg;
                 }
                 display: block;
-            }
-        }
-    }
-}
-
-#random_quotes_block {
-    @media print {
-        display: none;
-    }
-    @include sidebar_component;
-    padding-top: 5px;
-   
-    div.random_quotes {
-        @include sidebar_component_internal;
-
-        div.quote {
-            p {
-                @include compact;
-                &.qtext {
-                    @include set_font($font_quote, $font_size_quote, $color_quote_text, normal, normal);
-                    @include max-screen(720px) {
-                        font-size: $font_size_quote + 1;
-                    }
-                    line-height: $font_line_height_quote;
-                    i.fa-quote-left {
-                        color: lighten($color_sidebar_label, 15%);
-                    }
-                }
-
-                &.qauthor {
-                    @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
-                    text-transform: uppercase;
-                    padding-top: 5px;
-                }
-                &.context {
-                    @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
-                    font-style: italic;
-                    color: lighten($color_quote_author, 15%);
-                    margin-left: 20px;
-                    padding-top: 2px;
-                }
             }
         }
     }
