Move left/right components

--- a/_includes/hub_left_sidebar.html
+++ b/_includes/hub_left_sidebar.html
@@ -1,4 +1,5 @@
 <section class="column_left_sidebar">
-    {% include announcements.html %}
     {% include quotes.html %}
+    {% include announcements.html %}
+    {% include weather_satellite.html %}
 </section>
