--- a/_includes/hub_right_sidebar.html
+++ b/_includes/hub_right_sidebar.html
@@ -1,5 +1,5 @@
 <section class="column_right_sidebar">
     {% include datetime.html %}
-    {% include weather_satellite.html %}
+    {% include news_bits.html %}
     {% include feature.html %}
 </section>
