Add site sections

--- a/_includes/common_menu_links.html
+++ b/_includes/common_menu_links.html
@@ -3,6 +3,12 @@
     <li>
         <a href="/">{{ site.title }}</a>
     </li>
+    <li>
+        <a href="/news/top/">Top News</a>
+    </li>
+    <li>
+        <a href="/news/business/">Business</a>
+    </li>
     {% comment %}
     <li>
         <a href="/">Sections</a>
