Add left sidebar for info layout

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include hub_left_sidebar.html %}
+{% include info_left_sidebar.html %}
 
 <section class="post_column_main">
 
