Rename Top News to Headlines

--- a/_includes/common_menu_links.html
+++ b/_includes/common_menu_links.html
@@ -4,7 +4,7 @@
         <a href="/">{{ site.title }}</a>
     </li>
     <li>
-        <a href="/news/top/">Top News</a>
+        <a href="/news/top/">Headlines</a>
     </li>
     <li>
         <a href="/news/business/">Business</a>
