Left align post tags

--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -5,7 +5,7 @@
     <p>
         <table class="tags">
             <tr>
-                <td><img src="/images/tag.png" height="42" width="42" class="tagsymbol"/></td>
+                <td class="tags_column"><img src="/images/tag.png" height="42" width="42" class="tagsymbol"/></td>
                 <td>
                     {% if page.tags.size == 0 %}
                         <span class="tag">no tags</span>
