--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -995,6 +995,9 @@ section.post_column_main {
             border: none;
             padding: 0;
         }
+        td.tags_column {
+            width: 10px;
+        }
     }
     
     table.tags {
