Add other news post hub

--- a/_includes/common_menu_links.html
+++ b/_includes/common_menu_links.html
@@ -9,6 +9,9 @@
     <li>
         <a href="/news/business/">Business</a>
     </li>
+    <li>
+        <a href="/news/others/">Other Stories</a>
+    </li>
     {% comment %}
     <li>
         <a href="/">Sections</a>
