--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -1,34 +1,10 @@
 <div id="random_quotes_block">
     <div class="random_quotes">
-        <script type="text/javascript">
-            var quote_from =    [{% for quote in site.data.quotes %}"{{ quote.from }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-            var quote_context = [{% for quote in site.data.quotes %}"{{ quote.context }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-            var quote_text =    [{% for quote in site.data.quotes %}"{{ quote.text }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-            
-            var quote_total = quote_from.length;
-            var quote_count = 1;
-            
-            // Keep used random number here so we could check which
-            // numbers where already used and not use them again.
-            var randomUsed = [];
-            var counter = 0;
-
-            if (quote_total > 0) {
-                while (counter < quote_count) {
-                    var randomIndex = Math.floor(Math.random() * quote_total);
-                    if (randomUsed.indexOf(randomIndex) == "-1") {
-                        document.write("<div class='quote'>");
-                        document.write("<p class='qtext'><i class='fa fa-quote-left fa-lg' aria-hidden='true'></i>&nbsp;&nbsp;" + quote_text[randomIndex] + "</p>");
-                        document.write("<p class='qauthor'>&mdash;&nbsp;&nbsp;" + quote_from[randomIndex] + "</p>");
-                        document.write("<p class='context'>" + quote_context[randomIndex] + "</p>");
-                        document.write("</div>");
-
-                        // Store the new random number
-                        randomUsed.push(randomIndex);
-                        counter++;
-                    }
-                }
-            }
-        </script>
     </div>
 </div>
+
+<script>
+var quoteTotal = {{ site.data.quotes.size }} ;
+var quoteIndex = Math.floor(Math.random() * quoteTotal);
+$('.random_quotes').load('/resource/quotes.html div#quote_' + quoteIndex);
+</script>
