--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -731,15 +731,16 @@ section.post_column_main {
     p, a, li, dl {
         text-align: left;
 
-        @include set_font($font_page_text, $font_size_page_text, $color_page_text);
-        line-height: $font_line_height_page_text;
-
-        @include min-screen(720px + 1px) {
-            @include set_font($font_page_text, $font_size_page_text + 6, $color_page_text);
-            line-height: $font_line_height_page_text + 12;
+        @include set_font($font_page_text, $font_size_page_text + 6, $color_page_text);
+        line-height: $font_line_height_page_text + 12;
+        
+        @include max-screen(720px) {
+            @include set_font($font_page_text, $font_size_page_text, $color_page_text);
+            line-height: $font_line_height_page_text + 2;
         }
         @media print {
-            @include set_font($font_page_text, $font_size_page_text + 6, $color_page_text);
+            //@include set_font($font_page_text, $font_size_page_text + 6, $color_page_text);
+            @include set_font($font_page_text, $font_size_page_text + 4, $color_page_text);
             line-height: $font_size_page_text + 6 + 4;
         }
         
@@ -763,34 +764,43 @@ section.post_column_main {
     }
 
     p {
-        text-align: left;
         @include bottom_margin;
-
-        &.excerpt,
-        &.date,
-        &.category {
-            @include set_font($font_size_page_meta, $font_size_page_meta, $color_page_text, normal, italic);
-            line-height: $font_line_height_page_meta;
-            @include max-screen(720px) {
-                line-height: $font_line_height_page_meta + 2;
+    }
+    
+    div.meta {
+        p {
+            &.excerpt,
+            &.date,
+            &.category {
+                @include set_font($font_size_page_meta, $font_size_page_meta, $color_page_text, normal, italic);
+                line-height: $font_line_height_page_meta;
+                @include max-screen(720px) {
+                    line-height: $font_line_height_page_meta + 2;
+                }
+                margin: 0;
             }
-            margin: 0;
-        }
 
-        &.excerpt + h2,
-        &.date + h2,
-        &.category + h2 {
-            margin-top: 0px;
-            padding-top: 0px;
-        }
+            &.excerpt + h2,
+            &.date + h2,
+            &.category + h2 {
+                margin-top: 0px;
+                padding-top: 0px;
+            }
 
-        &.excerpt,
-        &.category {
-            @media print {
-                display: none;
+            &.excerpt,
+            &.category {
+                @media print {
+                    display: none;
+                }
+            }
+            &.date {
+                @media print {
+                    font-size: $font_size_page_meta + 2;
+                }
             }
         }
     }
+
 
     @include max-screen(720px) {
         sup {
