--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,11 @@
     {% else %}
         <p>{{ site.tagline }}</p>
     {% endif %}
-    <p>
+    <p class="license">
         Licensed under a Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA).<br/>
         You are free to copy, reproduce, distribute, display, and make adaptations but you must provide proper attribution.
+        Visit https://creativecommons.org/ or send an email to info@creativecommons.org for more information about the License.
     </p>
 </header>
     
 {% include common_menu_links.html %}
-
