--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -1,149 +1,13 @@
 <div id="announcements_block">
     <h1>Announcements</h1>
-    
-    {% assign counter = 0 %}
-    {% capture currentdate %}{{ 'now' | date: '%F' }}{% endcapture %}
-    {% for post in site.categories['announcement'] %}
-        {% capture postdatestart %}{{ post.datestart | date: '%F' }}{% endcapture %}
-        {% capture postdateend %}{{ post.dateend | date: '%F' }}{% endcapture %}
-        {% if currentdate >= postdatestart and currentdate <= postdateend %}
-            {% assign counter = counter | plus: 1 %}
-        {% endif %}
-    {% endfor %}
-    <div class="announcement_links">
-        {% if counter > 10 %}
-            {% assign counter = 10 %}
-        {% endif %}
-        {% for i in (1..counter) %}
-            <span class="dot" onclick="currentSlide({{ i }})"></span>
-        {% endfor %}
-    </div>
-    
-    <div class="announcements">
-    {% assign found = false %}
-    {% capture currentdate %}{{ 'now' | date: '%F' }}{% endcapture %}
-    {% for post in site.categories['announcement'] %}
-        {% capture postdatestart %}{{ post.datestart | date: '%F' }}{% endcapture %}
-        {% capture postdateend %}{{ post.dateend | date: '%F' }}{% endcapture %}
-        {% if currentdate >= postdatestart and currentdate <= postdateend %}
-            <div class="announcement">
-                <div class="announcement_heading">
-                    <h2>{{ post.title }}</h2>
-                    {% comment %}
-                    {% if post.image.source != nil %}
-                        <div class="image">
-                            <img src="{{ site.image_source }}{{ post.image.source }}" class="label" width="100%" height="auto"/>
-                            <p class="attribution">image by {{ post.image.attribution }}&nbsp;</p>
-                        </div>
-                    {% endif %}
-                    <p class="date">
-                        {% if post.eventdatestart != post.eventdateend %}
-                            {{ post.eventdatestart | date: '%a %d %b %Y' }} - {{ post.eventdateend | date: '%a %d %b %Y' }}
-                        {% else %}
-                            {{ post.eventdatestart | date: '%a %d %b %Y' }}
-                        {% endif %}
-                    </p>
-                    {% endcomment %}
-                </div>
-                <p>
-                    {{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
-                    {% if post.link != nil %}
-                        <a href="/post/{{ post.link }}.html">Read more...</a>
-                    {% endif%}
-                </p>
-            </div>
-            {% assign found = true %}
-        {% endif %}
-    {% endfor %}
-    {% if found == false %}
-        <!-- Random announcement -->
-        <script type="text/javascript">
-            var total = {{ site.data.announcement.size }};
-            var count = 1;
-
-            if (total == 0) {
-                
-            } else if (total == 1) {
-                document.write("<div class='announcement'>");
-                document.write("<div class='announcement_heading'>");
-                document.write("<h2>{{ site.data.announcement[0].title }}</h2>");
-                document.write("<p>{{ site.data.announcement[0].text }}</p>");
-                document.write("</div>");
-                document.write("</div>");
-            } else {
-                var announce_title = [{% for announce in site.data.announcement %}"{{ announce.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-                var announce_text =  [{% for announce in site.data.announcement %}"{{ announce.text }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-                // Keep used random number here so we could check which
-                // numbers where already used and not use them again.
-                var randomUsed = [];
-                var counter = 0;
-                while (counter < count) {
-                    var randomIndex = Math.floor(Math.random() * total);
-                    if (randomUsed.indexOf(randomIndex) == "-1") {
-                        document.write("<div class='announcement'>");
-                        document.write("<div class='announcement_heading'>");
-                        document.write("<h2>" + announce_title[randomIndex] + "</h2>");
-                        document.write("<p>"  + announce_text[randomIndex] + "</p>");
-                        document.write("</div>");
-                        document.write("</div>");
-                        // Store the new random number
-                        randomUsed.push(randomIndex);
-                        counter++;
-                    }
-                }
-            }
-        </script>
-    {% endif %}
+    <div id="announcements_content">
     </div>
 </div>
 
 <script>
-    {% if site.development %}
-    var slideIndex = 1;
-    showSlides(slideIndex);
-    {% else %}
-    var slideIndex = Math.floor(Math.random() * {{ counter }});
-    autoShowSlides();
-    {% endif %}
-
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
-
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
-
-    function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("announcement");
-      var dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
-    }
-    
-    function autoShowSlides() {
-        var i;
-        var slides = document.getElementsByClassName("announcement");
-        var dots = document.getElementsByClassName("dot");
-        for (i = 0; i < slides.length; i++) {
-           slides[i].style.display = "none";
+    $('#announcements_content').load('/resource/announcements.html',
+        function() {
+            autoShowSlides();
         }
-        slideIndex++;
-        if (slideIndex> slides.length) {slideIndex = 1}
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " active";
-        setTimeout(autoShowSlides, 15000);
-    }
+    );
 </script>
