Fix quote font style

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -100,6 +100,7 @@ $color_tag_bg:                  #ededed;
 // Quote
 $color_quote_text:              lighten($color_text, 20%);
 $color_quote_author:            $color_text;
+$color_quote_context:           $color_text;
 
 // Footer
 $color_footer_text:             black;
