--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -141,10 +141,12 @@ $font_line_height_related_post_excerpt: $font_line_height_default;
 
 // Quote
 $font_quote:                $font_sans_thin;
-$font_size_quote:           13px;
+$font_size_quote:           14px;
 $font_line_height_quote:    $font_size_quote + 4;
 $font_quote_author:         $font_serif_thin;
 $font_size_quote_author:    13px;
+$font_quote_context:        $font_serif_thin;
+$font_size_quote_context:   15px;
 
 // Current date/time
 $font_datetime:             $font_sans_thin;
