--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -32,8 +32,12 @@
                     padding-top: 5px;
                 }
                 &.context {
-                    @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
+                    @include set_font($font_quote_context, $font_size_quote_context, $color_quote_context);
                     font-style: italic;
+                    line-height: $font_size_quote_context;
+                    @include max-screen(720px) {
+                        line-height: $font_size_quote_context + 4;
+                    }
                     color: lighten($color_quote_author, 15%);
                     margin-left: 20px;
                     padding-top: 2px;
