--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -305,6 +305,14 @@
     }
 }
 
+@mixin wrap {
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 @mixin print_copyright {
     p, a {
         font-size: 10px;
