Do not split ending closing tag symbol to next line

--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -23,8 +23,7 @@
                 <a href="javascript:window.print()"
                     data-toggle="tooltip" 
                     data-placement="top"
-                    title="Print the page or save as PDF file"
-                >
+                    title="Print the page or save as PDF file">
                     <i class="fa fa-print fa-lg" aria-hidden="true"></i>&nbsp;
                     Print
                 </a>
@@ -33,8 +32,7 @@
                 <a href="https://twitter.com/share" data-via="{{ twitter }}"
                     data-toggle="tooltip" 
                     data-placement="top"
-                    title="Tweet this page"
-                >
+                    title="Tweet this page">
                     <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;
                     Tweet
                 </a>
