Make video display fluid for desktops and mobile devices

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,21 +49,25 @@ layout: default
     {% endif %}
     
     {% if page.video.source != nil and page.video.layout == "top" %}
+    <div class="video_container">
+        <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ page.video.source }}">https://www.youtube.com/watch?v={{ page.video.source }}</a></p>
         <div class="video">
-            <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ page.video.source }}">https://www.youtube.com/watch?v={{ page.video.source }}</a></p>
-            <iframe width="{{ site.data.youtube.width }}" height="{{ site.data.youtube.height }}" src="https://www.youtube.com/embed/{{ page.video.source }}" frameborder="0"></iframe>
-            <p class="attribution">video by {{ page.video.attribution }}&nbsp;</p>
+            <iframe src="https://www.youtube.com/embed/{{ page.video.source }}" frameborder="0"></iframe>
         </div>
+        <p class="attribution">video by {{ page.video.attribution }}&nbsp;</p>
+    </div>
     {% endif %}
     
     {{ content }}
     
     {% if page.video.source != nil and page.video.layout == "bottom" %}
+    <div class="video_container">
+        <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ page.video.source }}">https://www.youtube.com/watch?v={{ page.video.source }}</a></p>
         <div class="video">
-            <p class="video_link"><span>Link to video:</span><br/><a href="https://www.youtube.com/watch?v={{ page.video.source }}">https://www.youtube.com/watch?v={{ page.video.source }}</a></p>
-            <iframe width="{{ site.data.youtube.width }}" height="{{ site.data.youtube.height }}" src="https://www.youtube.com/embed/{{ page.video.source }}" frameborder="0"></iframe>
-            <p class="attribution">video by {{ page.video.attribution }}&nbsp;</p>
+            <iframe src="https://www.youtube.com/embed/{{ page.video.source }}" frameborder="0"></iframe>
         </div>
+        <p class="attribution">video by {{ page.video.attribution }}&nbsp;</p>
+    </div>
     {% endif %}
 
     {% include post_bottom.html %}
