--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,17 +10,6 @@
 @import "weather";
 @import "newsbits";
 
-// Default
-$video_width_default:       640px;
-$video_height_default:      360px;
-
-// 3/4
-$video_width_75:            ($video_width_default / 4) * 3;
-$video_height_75:           ($video_height_default / 4) * 3;
-
-// 1/2
-$video_width_50:            $video_width_default / 2;
-$video_height_50:           $video_height_default / 2;
 
 
 @page { size:8.5in 11in; margin: 1in; margin-left: 1.5in }
@@ -722,34 +711,36 @@ section.post_column_main {
             }
         }
     }
-    
-    div.video {
-        width: $video_width_75;
-        background: $color_image_bg;
-        padding: 5px 5px 5px 5px;
-        margin: 0 0px 20px 0;
-        iframe {
-            width: $video_width_75;
-            height: $video_height_75;
-            @include max-screen(768px) {
+
+    div.video_container {
+
+        @include video_frame;
+        width: calc(100% - 10px);
+
+        div.video {
+            width: 100%;
+            height: 0;
+            position: relative;
+            padding-bottom: 56.25%;
+
+            iframe {
+                position: absolute;
                 width: 100%;
-                height: auto;
+                height: 100%;
             }
         }
-        @include max-screen(768px) {
-            width: calc(100% - 15px);
-            height: auto;
-        }
+
         p.attribution {
             @include attribution;
-            padding: 2px 0px 3px 0px;
-            margin: 2px 0 0 0;
+            padding-top: 5px;
         }
+
         @media screen {
             p.video_link {
                 display: none;
             }
         }
+
         @media print {
             padding: 0;
             iframe,
@@ -1071,6 +1062,8 @@ section.post_column_main {
         }
     }
 }
+
+
 
 #post_tags {
     @media print {
