--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,13 @@ layout: default
         {% if page.excerpt %}<p class="excerpt">{{ page.excerpt }}</p>{% endif %}
         {% endcomment %}
         <p class="date">{% if page.date %} {{ page.date | date: site.data.format.date_only }} {% else %} Undated {% endif %}</p>
+        {% if site.development %}
         <p class="category">Filed under:&nbsp;
             {% for category in page.categories %}
                 <span>{{ category }}</span>&nbsp;
             {% endfor %}
         </p>
+        {% endif %}
     </div>
 
     {% if page.image.source != nil %}
