--- a/_sass/announcements.scss
+++ b/_sass/announcements.scss
@@ -5,7 +5,7 @@
     @include max-screen(720px) {
         display: none;
     }
-
+    
 }
 
 #announcements_block {
@@ -21,7 +21,7 @@
     @include max-screen(720px) {
         margin-top: 20px;
     }
-    
+    min-height: 170px;
     //border-top: 1px solid $color_news_line;
     
     div.announcement_links {
