Add bottom margin for tag texts

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1080,6 +1080,7 @@ section.post_column_main {
             display: inline-block;
             padding: 1px 8px 4px 6px;
             margin-right: 10px;
+            margin-bottom: 5px;
             background: $color_hr_default;
             border-radius: 3px;
             i.fa {
